--- a/NodeJS-Web-Server/views/home/index.html
+++ b/NodeJS-Web-Server/views/home/index.html
@@ -9,7 +9,7 @@
         TODO: Link favicon.
         TODO: Link css. -->
     <link rel="icon" href="./content/images/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="./content/styles/site.css">
+    <link rel="stylesheet" type="text/css" href="./content/styles/site.min.css">
 </head>
 <body>
     <header>
