--- a/Architecture-and-Authentication/views/layouts/main.handlebars
+++ b/Architecture-and-Authentication/views/layouts/main.handlebars
@@ -7,7 +7,14 @@
 </head>
 
 <body>
-  {{{body}}}
+  <div class="container">
+    <ul class="menu">
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
+
+    {{{body}}}
+  </div>
 </body>
 
 </html>
