Add car creating, validations, paging

--- a/Workshop-Car-Rental/public/css/site.css
+++ b/Workshop-Car-Rental/public/css/site.css
@@ -14,3 +14,15 @@ h1 {
 .menu li:after {
   content: "\00a0";
 }
+.mb60 {
+  margin-bottom: 60px;
+}
+.car-details {
+  width: 50%;
+}
+.car-details img {
+  width: 100%;
+}
+.pageBtn {
+  font-size: 3em;
+}
