--- a/Workshop-Car-Rental/views/layouts/main.handlebars
+++ b/Workshop-Car-Rental/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Test Blog system</title>
+  <title>Car Rental</title>
   <link href="/css/site.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -11,7 +11,9 @@
     <ul class="menu">
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
-      {{#if currentUser}}
+      {{#if isAdmin}}
+      <li><a href="/cars/add">Add car</a></li>
+      {{/if}} {{#if currentUser}}
       <li>{{currentUser.username}}</li>
       <li>
         <form id="logout-form" action="/users/logout" method="POST"></form>
