--- a/Workshop-Car-Rental/views/cars/all.handlebars
+++ b/Workshop-Car-Rental/views/cars/all.handlebars
@@ -1,3 +1,8 @@
+<form>
+  <input type="text" name="search" />
+  <input type="submit" value="Search" />
+</form>
+
 {{#each cars}}
 <div class="mb60 car-details">
   <h2>{{this.make }} {{this.model}} ({{this.year}})</h2>
@@ -16,10 +21,10 @@
 
 <div class="pageBtn">
   {{#if hasPrevPage}}
-    <a href="/cars/all?page={{prevPage}}">&lt;&lt;</a> 
+    <a href="/cars/all?page={{prevPage}}&search={{search}}">&lt;&lt;</a> 
     &nbsp;&nbsp;&nbsp; 
   {{/if}} 
   {{#if hasNextPage}}
-    <a href="/cars/all?page={{nextPage}}">&gt;&gt;</a> 
+    <a href="/cars/all?page={{nextPage}}&search={{search}}">&gt;&gt;</a> 
   {{/if}}
 </div>
