--- a/Workshop-Car-Rental/views/layouts/main.handlebars
+++ b/Workshop-Car-Rental/views/layouts/main.handlebars
@@ -11,6 +11,8 @@
     <ul class="menu">
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li>
+      <li><a href="/cars/all">All cars</a></li>     
+
       {{#if isAdmin}}
       <li><a href="/cars/add">Add car</a></li>
       {{/if}} {{#if currentUser}}
