--- a/Workshop-Car-Rental/views/cars/all.handlebars
+++ b/Workshop-Car-Rental/views/cars/all.handlebars
@@ -14,13 +14,29 @@
   {{#if this.power}}
     <h3>{{this.power}} hp</h3>
   {{/if}}
+
+  {{#if ../currentUser}}
+    <form action="/cars/rent/{{this._id}}" method="POST">
+      <select name="days">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+      </select>
+      <input type="submit" value="Rent" />
+    </form>
+  {{/if}}
+
 </div>
 {{else}}
   <h2>No cars available!</h2>
 {{/each}}
 
-<div class="pageBtn">
-  <div class="pageNum">
+<div class="paging">
+  <div class="pagination">
     {{#if hasPrevPage}}
     <a href="/cars/all?page=1&search={{search}}">&lt;&lt;&lt;</a>
     &nbsp;&nbsp;&nbsp; 
@@ -34,7 +50,7 @@
     <a>{{currentPage}}</a>
     &nbsp;&nbsp;&nbsp;     
   </div>
-  <div class="pageNum">
+  <div class="pagination">
     {{#if hasNextPage}}
       {{#if isNotLast}}
         <a href="/cars/all?page={{nextPage}}&search={{search}}">Page {{nextPage}}</a>
