--- a/Workshop-Car-Rental/views/layouts/main.handlebars
+++ b/Workshop-Car-Rental/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
   <title>Car Rental</title>
   <link href="/css/site.css" type="text/css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
       {{#if isAdmin}}
       <li><a href="/cars/add">Add car</a></li>
       {{/if}} {{#if currentUser}}
-      <li>{{currentUser.username}}</li>
+      <li><a href="/users/profile">{{currentUser.username}}</a></li>
       <li>
         <form id="logout-form" action="/users/logout" method="POST"></form>
         <a href="javascript:document.getElementById('logout-form').submit()">Logout</a>
