added edit car functionality

--- a/Workshop-Car-Rental/views/layouts/main.handlebars
+++ b/Workshop-Car-Rental/views/layouts/main.handlebars
@@ -28,8 +28,9 @@
       {{/if}}
     </ul>
     {{#if globalError}}
-    <h3>{{globalError}}</h3>
-    {{/if}} {{{body}}}
+      <h3>{{globalError}}</h3>
+    {{/if}} 
+    {{{body}}}
   </div>
 </body>
 
