--- a/Workshop-Car-Rental/views/cars/all.handlebars
+++ b/Workshop-Car-Rental/views/cars/all.handlebars
@@ -30,6 +30,12 @@
     </form>
   {{/if}}
 
+  {{#if ../isAdmin}}
+    <form>
+      <input type="submit" formaction="/cars/edit/{{this._id}}" value="Edit"/>
+    </form>
+  {{/if}}
+
 </div>
 {{else}}
   <h2>No cars available!</h2>
