Added success message when register/login/logout. Search form in main page added

--- a/Exam-Preparation-1/views/home/index.handlebars
+++ b/Exam-Preparation-1/views/home/index.handlebars
@@ -1,1 +1,10 @@
-<h1>Welcome to the Forum!</h1>
+<h1 class="head-title">Welcome to the Forum!</h1>
+
+<form id="search-form">
+  <input type="text" name="query" placeholder="Search..." />
+  <input type="submit" value="Search"/>
+</form>
+
+<div>
+
+</div>
