--- a/Exam-Preparation-1/views/layouts/main.handlebars
+++ b/Exam-Preparation-1/views/layouts/main.handlebars
@@ -2,16 +2,24 @@
 <html lang="en">
 
 <head>
-  <title>Test Blog system</title>
+  <title>Forum System</title>
   <link href="/css/site.css" type="text/css" rel="stylesheet" />
-</head>
+  </head>
 
 <body>
   <div class="nav">
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="/list">All threads</a></li>
+
       {{#if currentUser}}
+        <li><a href="/add">Add thread</a></li>
+
+        {{#if isAdmin}}
+          <li><a href="/admins/all">Show admins</a></li>
+          <li><a href="/admins/add">Add Admin</a></li>
+        {{/if}}
+
         <li class="delimiter"></li>
         <li class="align-right">
           <form id="logout-form" action="/users/logout" method="POST"></form>
@@ -24,6 +32,7 @@
         <li class="align-right"><a href="/users/login">Login</a></li>
       {{/if}}
     </ul>
+
     {{#if globalError}}
       <h3 class="error-msg">{{globalError}}</h3>
     {{else if success}}
