- admins can delete answers

--- a/Exam-Preparation-1/views/answers/add.handlebars
+++ b/Exam-Preparation-1/views/answers/add.handlebars
@@ -19,7 +19,7 @@
         
           {{#if ../isAdmin}}
             <a href="/answer/edit/{{_id}}">Edit answer</a>          
-            <a href="/thread/delete/{{_id}}">Delete answer</a>
+            <a href="/answer/delete/{{_id}}">Delete answer</a>
           {{/if}}
         <br/>
     {{/each}}
