Added - category add/delete functionality

--- a/Exam-Preparation-1/public/css/site.css
+++ b/Exam-Preparation-1/public/css/site.css
@@ -223,6 +223,11 @@ textarea.input-field {
   padding: 5px;
 }
 
+.categories li {
+  display: block;
+  text-align: left;
+}
+
 footer {
   padding: 15px;
 }
