--- a/Exam-Preparation-1/views/layouts/main.handlebars
+++ b/Exam-Preparation-1/views/layouts/main.handlebars
@@ -16,8 +16,10 @@
         <li><a href="/add">Add thread</a></li>
 
         {{#if isAdmin}}
+          <li><a href="/categories">Show categories</a></li>                
+          <li><a href="/category/add">Add category</a></li>        
           <li><a href="/admins/all">Show admins</a></li>
-          <li><a href="/admins/add">Add Admin</a></li>
+          <li><a href="/admins/add">Add admin</a></li>
         {{/if}}
 
         <li class="delimiter"></li>
