--- a/Exam-Preparation-1/views/categories/list.handlebars
+++ b/Exam-Preparation-1/views/categories/list.handlebars
@@ -1,7 +1,7 @@
 <div>
   <ul class="categories">
     {{#each categories}}
-      <li>{{this.name}} <a href="/category/delete/{{this._id}}">Delete</a></li>
+      <li><a a href="/list/{{this.name}}">{{this.name}}</a> <a href="/category/delete/{{this._id}}">Delete</a></li>
     {{/each}}
   </ul>
 </div>
