--- a/Exam-Preparation-1/views/threads/add.handlebars
+++ b/Exam-Preparation-1/views/threads/add.handlebars
@@ -12,6 +12,17 @@
   </div>
 
   <div class="form-group">
+    <label for="Category">Category</label>
+    <select class="input-field" name="category">
+      {{#each categories}}
+        <option value="{{this._id}}">
+          {{this.name}}
+        </option>
+      {{/each}}
+    </select>
+  </div>
+
+  <div class="form-group">
     <input class="btn form-btn" type="submit" value="Add" />
   </div>
 </form>
