--- a/Exam-Preparation-1/views/layouts/main.handlebars
+++ b/Exam-Preparation-1/views/layouts/main.handlebars
@@ -20,6 +20,8 @@
           <li><a href="/category/add">Add category</a></li>        
           <li><a href="/admins/all">Show admins</a></li>
           <li><a href="/admins/add">Add admin</a></li>
+          <li><a href="/users/all">Show users</a></li>
+          
         {{/if}}
 
         <li class="delimiter"></li>
